Bug 1825687: Objectionable material reported option doesn't align
Change padding for "Objectionable material reported" (class nolink)
to be the same as other options in the "More options"
menu on a page

change flag icon from green to red for the owner of a page reported as
objectionable.

behatnotneeded

--- a/htdocs/theme/raw/sass/form/_dropdown.scss
+++ b/htdocs/theme/raw/sass/form/_dropdown.scss
@@ -197,5 +197,10 @@
                 text-decoration: none;
             }
         }
+        > span.nolink {
+            padding: 5px 10px;
+            display: block;
+            white-space: nowrap;
+        }
     }
 }
